--- a/style.css
+++ b/style.css
@@ -32,56 +32,40 @@ h1{
     color: #82a18f;
 }
 
-.game-container{
-    padding: 20px;
+.game-container {
+    /* background-color: #fff; */
+    padding: 50px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    position: relative;
+    top: 70px;
 }
 
-.game-board{
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(3, 100px);
-    gap: 5px;
-    margin: 20px auto;
-    width: 315px;
-}
-
-.cell{
-    width: 100px;
-    height: 100px;
-    background-color: #896c68;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 4px;
-}
-
-.cell:hover{
-    background-color: #82a18f;
-}
-
-.message{
-    margin-top: 15px;
-    font-size: 1.2em;
-    font-weight: bold;
-}
-
-#restartButton{
-    margin-top: 20px;
+.choices button {
     padding: 10px 20px;
-    font-size: 1em;
+    margin: 5px;
+    font-size: 16px;
     cursor: pointer;
-    background-color: #82a18f;
-    color: white;
     border: none;
     border-radius: 5px;
+    background-color: #896c68;
+    /* color: white; */
 }
 
-#restartButton:hover{
-    background-color: 	#896c68;
+.choices button:hover {
+    background-color: #82a18f;
 }
+
+.result p {
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+#game-result {
+    font-weight: bold;
+    color: #333;
+}
+
+
+
