--- a/snake.css
+++ b/snake.css
@@ -33,7 +33,7 @@ h1{
 }
 
 .game-container {
-    background-color: #222;
+    /* background-color: #222; */
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -41,7 +41,7 @@ h1{
 }
 
 #gameCanvas {
-    background-color: #000;
+    /* background-color: #000; */
     border: 2px solid #555;
     display: block; /* Remove extra space below canvas */
     margin-top: 15px;
@@ -50,4 +50,25 @@ h1{
 .score-display {
     font-size: 1.5em;
     margin-bottom: 10px;
+}
+
+.game-board{
+    position: relative;
+    left: 400px;
+}
+
+.restart-btn {
+    margin-top: 10px;
+    padding: 8px 16px;
+    font-size: 16px;
+    background-color: #896c68;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+.restart-btn:hover {
+    background-color: #82a18f;
 }
