--- a/snake.css
+++ b/snake.css
@@ -38,6 +38,8 @@ h1{
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
+    position: relative;
+    top: 70px;
 }
 
 #gameCanvas {
